tests/miz/fail/parser/fail_parser_set_comprehension_missing_is_001.miz
theorem MissingGeneratorIs: { x where x set : thesis } = y;
